--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -6,6 +6,9 @@
     flex-direction: column;
     background-color: var(--gray-900);
 }
+.logoImage {
+    width: 300px;
+}
 
 .login {
     margin-top: 2rem;
@@ -14,16 +17,22 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 2rem 1.5rem;
+    padding: 0 1.5rem;
 
     form {
         width: 90%;
         display: flex;
         flex-direction: column;
+        padding-top: 2rem;
     }
     form button {
         height: 40px;
         font-size: 1.2rem;
+    }
+    
+    h1 {
+        color: var(--white);
+        padding-bottom: 1rem;
     }
 
 }
@@ -38,10 +47,14 @@
     .login {
         width: 90%;
     }
+
 }
 
 @media (max-width: 420px) {
     .login {
         width: 95%;
+    }
+    .logoImage {
+        width: 250px;
     }
 }
