feat: add settings

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,7 +5,8 @@
 .headerContent {
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 17px 2rem;
+    height: 100%;
 
     display: flex;
     justify-content: space-between;
