--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -51,7 +51,7 @@
 }
 .labelAvatar {
     width: 100%;
-    height: 200px;
+    height: 45vw;
     background-color: var(--dark-900);
     margin-bottom: 1rem;
     border-radius: 0.3rem;
