feat: add api link to deploy in the render

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -44,3 +44,15 @@
         }
     }
 }
+
+@media (max-width: 500px) {
+    
+    .headerContent {
+        flex-direction: column;
+        gap: 15px;
+
+        img {
+            height: 40px;
+        }
+    }
+}
